--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<%= notice %>
+
+<%= alert %>
+
+<h1>Books</h1>
+<p>Title</p>
+<p>Body</p>
+<% @books.each do |f| %>
+
+<span><%= f.title %></span>
+
+<span><%= f.body %></span>
+
+<%= link_to "Show","/books/#{f.id}" %>
+
+<%= link_to "Edit","/books/#{f.id}/edit" %>
+
+<%= link_to "Destroy","/books/#{f.id}",method: :delete,"data-confirm"=>"Are you sure?" %>
+
+<% end %>
+
+
+<h1>New book</h1>
+<%= form_with model:Book.new do |f| %>
+
+<h4>Title</h4>
+<%= f.text_field:title %>
+
+<h4>Body</h4>
+<%= f.text_area:body %>
+
+<%= f.submit'Create Book' %>
+
+<% end %>
+</html>
