--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<!DOCTYPE html>
+<html>
+
+  <h3>Title:</h3>
+
+  <p><%= @book.title %></p>
+
+  <h3>Body:</h3>
+
+  <p><%= @book.body %></p>
+
+  <%= link_to "Edit","/books/@book/edit" %>
+
+　<%= link_to "Back","/books/@book" %>
+
+</html>
