--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,28 @@
+<div class="notice"><%= notice %></div>
+
 <h1>Editing Book</h1>
 
-<%= form_with model:@book do |f| %>
+<% if @book.errors.any? %>
+<%= @book.errors.count %>errors prohibited this book from being saved:
+ <ul>
+   <% @book.errors.full_messages.each do |message| %>
+     <li><%= message %></li>
+   <% end %>
+ </ul>
+<% end %>
 
-<h4>Title</h4>
+<%= form_with model: @book do |f| %>
+<div class="field">
+  <h4>Title</h4>
+  <%= f.text_field:title %>
+</div>
+<div class="field">
+  <h4>Body</h4>
+  <%= f.text_area:body %>
+</div>
 
-<%= f.text_field:title %>
+<div class="action"><%= f.submit'Update Book'%></div>
 
-<h4>Body</h4>
-
-<%= f.text_area:body %>
-
-<%= f.submit'Update Book'%>
+<p><%= link_to "Show","/books/#{@book.id}" %>|<%= link_to "Back","/books" %></p>
 
 <% end %>
