--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,10 @@
-<!DOCTYPE html>
-
-<h1>ようこそ Bookers へ！</h1>
-<p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
-<p>印象を共有し交換することができます</p>
-<a href="/books">start</a>
+<h1>ようこそ <span class="bookers">Bookers</span> へ！</h1>
+<div class="body">
+<p>
+<span class="bookers">Bookers</span>では、さまざまな書籍に関するあなたの意見や
+</p>
+<p>
+印象を共有し交換することができます
+</p>
+<p><a href="/books">start</a></p>
+</div>
